<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="320dp"
        android:layout_height="640dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/panjang"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_fieldPanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/hint_panjang"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/text_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lebar"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_fieldLebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/hint_lebar"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/text_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_fieldTinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/hint_tinggi"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/button_calculateVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/btn_hitung" />

        <TextView
            android:id="@+id/text_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/hint_hasil"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_displayHasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>